# templar

./: .dockerignore  .env-template  .env-template.yaml  .env.example  .env.yaml  .gitignore  .gitmodules  .pre-commit-config.yaml  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  _metadata.yaml  _shard_sizes.json  bad_peers_log.json  blacklist.toml  bucket.py  codecov.yml  config.toml  docker-compose-test.yml  ecosystem.config.js  ecosystemdev.config.js  eval.py  evaluation.py  hparams-local-run.json  hparams.json  justfile  min_compute.yml  miner.py  pyproject.toml  pytest.ini  requirements-test.txt  run.py  start.sh  test_lm_eval_direct.py  testconfig.js  validator-state-dev-ghotwgeo.pt  validator.py
.cache/tplr/: shard_sizes.json
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yaml  feature_request.yaml
.github/workflows/: ci.yml  docker.yml  ruff.yml  test.yml
ansible/: README.md  provision.yml
api/: README.md  index.js  package.json
api/src/: server.js
benchmark_results/: parquet_loader_results.csv
docker/: Dockerfile  compose.yml  docker-compose-test.yml  install.sh  loki-entrypoint.sh  metrics.yml
docs/: README.md  checkpointing.md  evaluator-local.md  evaluator.md  global_sync.md  incentive_design.md  localnet.md  log_archive.md  miner-setup-ansible.md  miner.md  model_converter-local.md  model_converter.md  prod-subtensor.md  profilers.md  r2_bucket_management.md  r2_dataset-dclm.md  r2_dataset-fineweb-edu.md  r2_dataset.md  shared_sharded_dataset.md  validator.md
env/: pyvenv.cfg
grafana/: .env.sample  README.md  app.py  dashboard.json  loki-config.yaml  requirements.txt  view.sql
grafana/classes/: grafana_tools.py  models.py
grafana/migrations/: alembic.ini
hparams/: 150M.json  1B.json  512M.json  8B.json  hparams-local-run.json  hparams.json
neurons/: __init__.py  aggregator.py  base_node.py  evaluator.py  miner.py  miner_ddp.py  miner_old.py  rat.py  trainer.py  vali_b.py  validator.py
scripts/: aggregation.py  analyser.py  bench_llama_torchrun.py  clean.py  clean_testnet.py  clean_versions.py  cleanup_bucket.py  collector.py  decay.py  delete_gather.py  delete_version.py  docker_run  download_dataset.py  entrypoint.sh  eval.py  evaluator-hf-local.py  evaluator-local.py  evaluator.py  get_checkpoint.py  get_gradients.py  hfdownloader.py  local_miner_test.py  local_train_test.py  model_converter-local.py  model_converter.py  nsys.sh  release.sh  run.sh  run_hfdownloader.sh  s3_manager.py  setup_test.sh  shard_scanner.py  start.sh  test_init.py  tune_os.sh  validate_r2_access.py
scripts/benchmarks/: benchmark_dataloader.py  benchmark_encoding.py  benchmark_gather.py  benchmark_loader.py  benchmark_loader_compare.py  benchmark_parquet_loader.py  benchmark_process_page.py  benchmark_r2_dataset.py  benchmark_r2_vs_s3.py  benchmark_s3.py  benchmark_s3_get_object.py  benchmark_s3_propagation.py  buckets.py
scripts/dataset_prep/: 01_pretokenize_data.py  02_consolidate_shards.py  README.md  single_testing_shard.py
scripts/dclm-dataset-ops/: analyze_shard_performance.py  dclm_dataset_to_shard_sizes.py  hf_shard_sizes.py  optimize_parquet.py  shards_validator.py  update_shard_sizes.py
scripts/evaluator-setup/: compose.yml
scripts/gpu-box-setup/: README.md  inventory.example  playbook.yml
scripts/local_chain/: README.md  docker-compose.yaml  setup.sh  setup_subnet.py
scripts/localnet/: .gitignore  README.md  inventory.example  playbook.yml  reload.yml  rsync.yml
scripts/miner-setup-ansible/: .gitignore  inventory.example  playbook.yml
scripts/prod-subtensor/: .gitignore  README.md  REPLICATION.md  ansible.cfg  health_check.py  inventory.example  playbook.yml
scripts/rentcompute/: .rentcompute.yml  README.md  pyproject.toml  rentcompute.yml.example
scripts/rentcompute/src/rentcompute/: __init__.py  cli.py  config.py  provisioning.py
scripts/rentcompute/src/rentcompute/commands/: __init__.py  list_instances.py  login.py  provision.py  reload.py  rsync.py  search.py  start.py  stop.py
scripts/rentcompute/src/rentcompute/providers/: __init__.py  base.py  celium.py  factory.py  mock.py
src/templar/: __init__.py  autoupdate.py  chain.py  checkpoint.py  commitment.py  comms.py  config.py  constants.py  dataset.py  hparams.py  learning_rates.py  logging.py  schemas.py  wandb.py
src/tplr/: .env.sample  __init__.py  aggregation.py  autoupdate.py  bits.py  catchup.py  chain.py  chain_sync.py  checkpoint.py  comms.py  compress.py  compression.py  config.py  config_manager.py  dataset.py  dcp_checkpoint.py  debug_manager.py  decos.py  distrib.py  io.py  (+27 more)
telemetry/: README.md  grafana_README.md
tests/: conftest.py  test_aggregation_manager.py  test_autoupdater.py  test_batch_tensor_processing.py  test_checkpoint_fallback.py  test_checkpoint_manager.py  test_checkpoints.py  test_client.py  test_comms.py  test_compression.py  test_dataset_equivalence.py  test_dcp_checkpoint.py  test_evaluator.py  test_file_manager.py  test_gradient_manager.py  test_inactivity_slashing.py  test_influx_integration.py  test_local_parquet_loader.py  test_metrics_logger.py  test_miner.py  test_miner_advanced.py  test_model_comparison.py  test_peer_selection.py  test_prepare_gradient_dict.py  test_r2_loader.py  test_sharded_dataset.py  test_state_loading.py  test_trainer_meta_init.py  test_validate_r2_access_comprehensive.py  test_validator.py
(+359 files in other folders)
