[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "tplr"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "bittensor==9.0.0",
    "bt-decode",
    "torch",
    "boto3",
    "einops",
    "aiofiles",
    "aiofiles==24.1.0",
    "aioboto3==13.2.0",
    "transformers",
    "pip",
    "wandb",
    "python-dotenv",
    "zstandard",
    "Flask==2.2.2",
    "Flask-SQLAlchemy==2.5.1",
    "Flask-Migrate==3.1.0",
    "asyncio==3.4.3",
    "werkzeug==2.2.3",
    "s3fs",
    "pyarrow",
    "scipy"
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=4.1.0",
    "pytest-asyncio",
    "ipykernel",
    "ipython",
    "pandas",
    "matplotlib",
    "seaborn",
    "pytest-asyncio",
    "ruff",
    "pytest-xdist"

]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
addopts = "-v -s --capture=no --log-cli-level=INFO"
asyncio_mode = "auto"
markers = [
    "asyncio: mark test as async",
]
filterwarnings = [
    "ignore::DeprecationWarning",
    "ignore::PendingDeprecationWarning",
    "ignore::FutureWarning",
    "ignore::pytest_asyncio.plugin.PytestDeprecationWarning",
    # Keep other warnings
    "default::RuntimeWarning",
    "default::UserWarning",
]